fix(tailwind-config,pixels): tailwind opacity modifier not working

--- a/packages/config/tailwind-config/tailwind.css
+++ b/packages/config/tailwind-config/tailwind.css
@@ -9,17 +9,17 @@
 
   /* info light */
   --theme-info: var(--theme-info-500);
-  --theme-info-foreground: #ffffff;
-  --theme-info-50: #e6f1fe;
-  --theme-info-100: #cce3fd;
-  --theme-info-200: #99c7fb;
-  --theme-info-300: #66aaf9;
-  --theme-info-400: #338ef7;
-  --theme-info-500: #006FEE;
-  --theme-info-600: #005bc4;
-  --theme-info-700: #004493;
-  --theme-info-800: #002e62;
-  --theme-info-900: #001731;
+  --theme-info-foreground: 0 0% 100%;     /** #ffffff */
+  --theme-info-50: 213 92% 95%;           /** #e6f1fe */
+  --theme-info-100: 212 92% 90%;          /** #cce3fd */
+  --theme-info-200: 212 92% 79%;          /** #99c7fb */
+  --theme-info-300: 212 92% 69%;          /** #66aaf9 */
+  --theme-info-400: 212 92% 58%;          /** #338ef7 */
+  --theme-info-500: 212 100% 47%;         /** #006FEE */
+  --theme-info-600: 212 100% 38%;         /** #005bc4 */
+  --theme-info-700: 212 100% 29%;         /** #004493 */
+  --theme-info-800: 212 100% 19%;         /** #002e62 */
+  --theme-info-900: 212 100% 10%;         /** #001731 */
 
 }
 
@@ -30,16 +30,15 @@
 
   /* info dark */
   --theme-info: var(--theme-info-400);
-  --theme-info-foreground: #ffffff;
-  --theme-info-50: #001731;
-  --theme-info-100: #002e62;
-  --theme-info-200: #004493;
-  --theme-info-300: #005bc4;
-  --theme-info-400: #006FEE;
-  --theme-info-500: #338ef7;
-  --theme-info-600: #66aaf9;
-  --theme-info-700: #99c7fb;
-  --theme-info-800: #cce3fd;
-  --theme-info-900: #e6f1fe;
-
+  --theme-info-foreground: 0, 0%, 100%;   /** #ffffff */
+  --theme-info-50: 212 100%, 10%;         /** #001731 */
+  --theme-info-100: 212 100% 19%;         /** #002e62 */
+  --theme-info-200: 212 100% 29%;         /** #004493 */
+  --theme-info-300: 212 100% 38%;         /** #005bc4 */
+  --theme-info-400: 212 100% 47%;         /** #006FEE */
+  --theme-info-500: 212 92% 58%;          /** #338ef7 */
+  --theme-info-600: 212 92% 69%;          /** #66aaf9 */
+  --theme-info-700: 212 92% 79%;          /** #99c7fb */
+  --theme-info-800: 212 92% 90%;          /** #cce3fd */
+  --theme-info-900: 213 92% 95%;          /** #e6f1fe */
 }
