chore: fix comment in tailwind.css

--- a/packages/config/tailwind-config/tailwind.css
+++ b/packages/config/tailwind-config/tailwind.css
@@ -7,7 +7,7 @@
  ********************************************************************/
  :root {
 
-  /* info color palette dark */
+  /* info color palette */
   --theme-info: var(--theme-info-500);
   --theme-info-foreground: 0 0% 100%;     /** #ffffff */
   --theme-info-50: 213 92% 95%;           /** #e6f1fe */
@@ -20,7 +20,6 @@
   --theme-info-700: 212 100% 29%;         /** #004493 */
   --theme-info-800: 212 100% 19%;         /** #002e62 */
   --theme-info-900: 212 100% 10%;         /** #001731 */
-
 }
 
 /********************************************************************
