fix(uniform): set background color on Input components

--- a/packages/pixels/src/Json/theme.css
+++ b/packages/pixels/src/Json/theme.css
@@ -2,7 +2,7 @@
  * light theme variables
   * see: https://github.com/uiwjs/react-json-view/blob/main/core/src/theme/light.ts
  ********************************************************************/
- :root {
+:root {
   --w-rjv-font-family: monospace;
   --w-rjv-color: #002b36;
   --w-rjv-key-string: #002b36;
@@ -37,7 +37,7 @@
  * dark theme variables
  * see: https://github.com/uiwjs/react-json-view/blob/main/core/src/theme/vscode.ts
  ********************************************************************/
-:root[data-theme="dark"] {
+:root[data-theme='dark'] {
   --w-rjv-font-family: monospace;
   --w-rjv-color: #9cdcfe;
   --w-rjv-key-string: #9cdcfe;
