fix: reformat most components with latest eslint-config-fuf

--- a/packages/pixels/src/Json/theme.css
+++ b/packages/pixels/src/Json/theme.css
@@ -38,7 +38,7 @@
  * see: https://github.com/uiwjs/react-json-view/blob/main/core/src/theme/vscode.ts
  ********************************************************************/
 html.dark,
-:root[data-theme="dark"] {
+:root[data-theme='dark'] {
   --w-rjv-font-family: monospace;
   --w-rjv-color: #9cdcfe;
   --w-rjv-key-string: #9cdcfe;
